fix profil overflow

--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -6,8 +6,8 @@
   display: flex;
   margin: 0 auto;
   align-self: center;
-  max-width: 1200px;
-  height: 90vh;
+  max-width: 1300px;
+  height: 85vh;
 }
 
 
@@ -61,6 +61,7 @@
   margin-top: 20px;
   border-right: 1px solid #ccc;
   overflow-y: auto;
+  overflow: hidden;
 }
 
 #resetpasswordview {
